# rename-rs

./: Cargo.toml  README.md
examples/: macro.rs
src/: lib.rs
tests/: tests.rs
tests/structs/: append.rs  mod.rs  name.rs  prepend.rs
