[package]
name = "rename_derive"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
license = "GPLv3"
readme = "README.md"
description = "Easy modification of structure names"
repository = "https://github.com/not-matthias/rename_derive/"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { version = "1.0.17", features = ["full"]}
quote = "1.0.3"